Pull request #15: New message types handling
Merge in TO2024/mi-pt-1500-jelenie from New-message-types-handling to Milestone_1

Squashed commit of the following:

commit 8920d52f82338be64435922fe52c2af8e3a45ee6
Author: Lukasz <lukasz.9@o2.pl>
Date:   Thu Dec 12 23:02:21 2024 +0100

    Set max text message buffer size 1024 * 1024 * 4

commit bab792df6c8c29685d4b1a97aae875929fa79e3d
Merge: 4e19426 f9f8607
Author: Lukasz <lukasz.9@o2.pl>
Date:   Thu Dec 12 22:55:31 2024 +0100

    Merge branch 'Milestone_1' into New-message-types-handling
    
    # Conflicts:
    #	backend/src/main/java/agh/project/oot/Message.java
    #	backend/src/main/java/agh/project/oot/MessageType.java
    #	backend/src/main/java/agh/project/oot/OotConfiguration.java
    #	backend/src/main/java/agh/project/oot/ResponseStatus.java
    #	backend/src/main/java/agh/project/oot/database/Image.java
    #	backend/src/main/java/agh/project/oot/database/ImageRepository.java
    #	backend/src/main/java/agh/project/oot/database/Thumbnail.java
    #	backend/src/main/java/agh/project/oot/database/ThumbnailRepository.java
    #	backend/src/main/java/agh/project/oot/thumbnails/ThumbnailController.java
    #	backend/src/main/java/agh/project/oot/thumbnails/ThumbnailConverter.java
    #	backend/src/main/java/agh/project/oot/thumbnails/ThumbnailService.java
    #	backend/src/main/resources/application.properties
    #	backend/src/test/java/agh/project/oot/ThumbnailServiceTest.java
    #	docker-compose.yml

commit 4e19426033c1c84e65b216552b910a97c09ff8b4
Author: Mateusz <zsuetam36@gmail.com>
Date:   Thu Dec 12 22:44:35 2024 +0100

    Added some photos

commit bd9842923cc77c7b0d6f42a0f950d8f3cec17dbe
Author: Lukasz <lukasz.9@o2.pl>
Date:   Thu Dec 12 22:31:41 2024 +0100

    Refactoring

commit 23543f0972d6a0174a1c64f6004384bf648d349e
Author: Lukasz <lukasz.9@o2.pl>
Date:   Thu Dec 12 19:40:39 2024 +0100

    Pre-final version

commit f6bdd0d0a55aee3be9a0f99b06ef6b7aa4cab3b5
Author: Lukasz <lukasz.9@o2.pl>
Date: 